--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,7 @@
   /* width: 100%; */
   height: 100%;
   padding: 0;
+  max-width: initial;
 }
 
 .modal-header .close {
@@ -24,10 +25,13 @@
   opacity: 1;
 }
 
+.modal-header span {
+  display: none;
+}
+
 .modal-dialog span {
   margin: 0 auto;
   padding: 1vh;
-  
 }
 
 .modal-content {
@@ -45,8 +49,19 @@
 }
 
 .modal-footer {
-  /* position: absolute;
-  bottom: 0px; */
+  border: 0;
+}
+
+.modal-footer button {
+  padding: 0 2rem;
+  text-align: center;
+  font-size: 1.5vmax;
+  height: 5vmax;
+  /* font-size: 150%; */
+  background-color: black;
+  color: #ccc;
+  border: solid 1px rgb(197, 29, 29);
+  margin: 0 auto;
 }
 
 button .close {
@@ -67,7 +82,9 @@ body, html {
 
 .container {
   /* width: 100%; */
-  margin: 0 auto;
+  background-color: #333;
+  color: rgb(150, 227, 250);
+  outline: solid 1px rgb(150, 227, 250);
   box-sizing: border-box;
   background-color: rgb(37, 37, 37);
 }
@@ -185,6 +202,61 @@ input[type="text"]:focus {
   color: rgb(150, 227, 250);
 }
 
+#home {
+  overflow: auto;
+}
+
+.user-form .container {
+  text-align: center;
+  background: black;
+  height: 30vmax;
+  margin: 0;
+}
+
+/* .user-form {
+  height: 70vmax;
+} */
+
+.user-form input {
+  margin-left: .5rem;
+}
+
+.user-form button {
+  background-color: #333;
+  color: rgb(150, 227, 250);
+  outline: solid 1px rgb(150, 227, 250);
+  margin: 0 1rem;
+}
+
+.user-form label {
+  width: 5rem;
+  text-align: right;
+}
+.user-form label {
+  width: 5rem;
+  text-align: right;
+}
+
+.user-form .footnote {
+  margin-top: 2rem;
+}
+
+h5, h6, h7, h8 {
+  text-align: center;
+  color: #ccc;
+  margin: .5rem;
+}
+
+.aboutModal p, .helpModal p {
+  margin: .25rem;
+} 
+
+.helpModal .modal-body {
+  -webkit-column-width: 300px;
+  -moz-column-width: 3000px;
+       column-width: 300px;
+}
+
 /* Tablet Portrait */
 @media screen and (min-width: 768px) {
   
@@ -199,7 +271,7 @@ input[type="text"]:focus {
   .container {
     margin-top: 3vmax;
     padding: 0;
-    border-left: 1px solid rgb(150, 227, 250);
+    /* border-left: 1px solid rgb(150, 227, 250); */
   }
 
   #roomDesc {
